--- a/sign-up.html
+++ b/sign-up.html
@@ -39,11 +39,10 @@
   </head>
   <body>
     <!-- Header -->
-    <header id="header" class="header">
+    <header class="header">
       <script>
         load("#header", "./template/header.html");
       </script>
     </header>
-    <div class="container"></div>
   </body>
 </html>
