--- a/sign-in.html
+++ b/sign-in.html
@@ -38,12 +38,10 @@
     <script src="./assets/js/scripts.js"></script>
   </head>
   <body>
-    <!-- Header -->
-    <header id="header" class="header">
+    <header class="header">
       <script>
         load("#header", "./template/header.html");
       </script>
     </header>
-    <div class="container"></div>
   </body>
 </html>
